# vpnVPN

./: .dockerignore  .gitignore  AGENTS.md  FINAL_STATUS.md  README.md  TEST_RESULTS.md  biome.json  env.example  package.json  railway.toml  turbo.json
.github/workflows/: ci.yml  deploy-backend.yml  desktop-build.yml  e2e.yml  pulumi-deploy.yml  rust-build-push.yml  services-deploy.yml
admin-ui/: README.md  env.local.example  middleware.ts  package.json  tsconfig.json
admin-ui/app/: layout.tsx
admin-ui/components/: SiteHeader.tsx
admin-ui/lib/: auth.ts  prisma.ts  stripe.ts
admin-ui/prisma/: schema.prisma
apps/desktop/: .env.example  .gitignore  DEVELOPMENT.md  README.md  package.json  vite.config.ts  vitest.config.ts
apps/desktop/daemon/: Cargo.toml
apps/desktop/daemon/scripts/: dev.sh
apps/desktop/daemon/src/: connectivity.rs  main.rs  state.rs  tools.rs  update.rs
apps/desktop/daemon/src/credentials/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/daemon/src/firewall/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/daemon/src/ipc/: auth.rs  handler.rs  mod.rs  server.rs  unix.rs  windows.rs
apps/desktop/daemon/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/daemon/src/vpn/: ikev2.rs  mod.rs  openvpn.rs  wireguard.rs
apps/desktop/shared/: Cargo.toml
apps/desktop/shared/src/: config.rs  error.rs  ipc.rs  lib.rs  protocol.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: prepare-daemon.ps1  prepare-daemon.sh
apps/desktop/src-tauri/src/: daemon_client.rs  main.rs  tray.rs
apps/vpn-server/: .dockerignore  Cargo.toml  Dockerfile  env.example  package.json  rust-toolchain.toml
apps/vpn-server/src/: client.rs  config.rs  ikev2.rs  logging.rs  main.rs  pki.rs
apps/vpn-server/src/admin/: mod.rs
apps/vpn-server/src/client/: tests.rs
apps/vpn-server/src/metrics/: cloudwatch.rs  mod.rs
apps/vpn-server/src/net/: listener.rs  mod.rs  os.rs  os_tests.rs
apps/vpn-server/src/net/os/: linux.rs  macos.rs  os_tests.rs  windows.rs
apps/vpn-server/src/vpn/: ipsec.rs  mod.rs  openvpn.rs  tests.rs  wireguard.rs
apps/web/: Dockerfile  README.md  biome.json  env.local.example  env.ts  middleware.ts  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
desktop-app/: README.md  index.html  package.json  vite.config.ts
desktop-app/src/: App.test.tsx  main.tsx  styles.css
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
docs/: AGENTS.md  AGENT_PROMPTS.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  BACKUP_RECOVERY.md  CERTIFICATE_ROTATION.md  CI_CD.md  CONFIGURATION.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEV.md  OPERATIONS.md  PRODUCTION_SETUP.md  PROJECT_SPEC.md  README.md  SECRETS_MANAGEMENT.md  TODO.md  TROUBLESHOOTING.md  TRPC_MIGRATION.md  VPN_NODE_RUNBOOK.md  prezentacja.md  prezentacja.pptx  prezentacja_md2pptx.md  prezentacja_postep.md  propozycja_pracy.md  propozycja_pracy_skrocona.md  strona_tytulowa_128197 (1).docx
docs/pres/: Prezentacja_Inzynierska_VPN.pptx  package.json  prezentacja.html  test.js
docs/thesis/: generate_thesis.py  praca_licencjacka.docx
e2e/: Dockerfile.test-client  compose-e2e.yaml  run-e2e.sh
infra/: README.md
infra/pulumi/: Pulumi.global-production.yaml  Pulumi.global-staging.yaml  Pulumi.global.yaml  Pulumi.yaml  (+15 more)
local/: CHANGELOG.md  FEATURES.md  README.md  compose.yaml  control-plane-vpn.jest.test.js  e2e-test.js  example-usage.sh  local-flow.test.ts  run-vpn-local.sh  stop-local.sh  test-flow.sh
scripts/: deploy.sh  dev-web.sh  dev.sh  fix-macos-quarantine.sh  logs.sh  macos-install-helper.sh  regions.json  setup-vpn-node.sh  teardown.sh
vpn-server/: Cargo.toml  Dockerfile  README.md
web-app/: .dockerignore  .eslintrc.js  Dockerfile  README.md  env.local.example  eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+257 files in other folders)
