[package]
name = "vpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"
prometheus = "0.13"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.14"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
dashmap = "5.5"
parking_lot = "0.12"
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-appender = "0.2"
serde_with = { version = "3.8", features = ["chrono"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-util = "0.7"
base64 = "0.22"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
sysinfo = "0.30"
rcgen = "0.12.1"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
