[package]
name = "vpnvpn-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types between vpnVPN GUI and daemon"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
dirs = "5.0"

